# apollo-control

./: .gitignore  README.md  install-startup.ps1
apollo-control/: index.html  package-lock.json  package.json
apollo-control/scripts/: release.mjs
apollo-control/src/: App.css  App.tsx  index.css  main.tsx
apollo-control/src-tauri/: Cargo.toml  tauri.conf.json
apollo-control/src-tauri/capabilities/: default.json
apollo-control/src-tauri/icons/: icon.icns
apollo-control/src-tauri/src/: actions.rs  config.rs  hook.rs  hotkeys.rs  lib.rs  main.rs  midi.rs  sdk.rs
apollo-control/src/client/: tauri.ts
apollo-control/src/components/ControlPicker/: ControlPicker.css  ControlPicker.tsx
apollo-control/src/components/ControlRow/: ControlRow.css  ControlRow.tsx
apollo-control/src/components/KeyCapture/: KeyCapture.css  KeyCapture.tsx
apollo-control/src/components/MappingEditor/: MappingEditor.css  MappingEditor.tsx
apollo-control/src/components/MappingModal/: MappingModal.css  MappingModal.tsx
apollo-control/src/components/SettingsModal/: SettingsModal.css  SettingsModal.tsx
apollo-control/src/hooks/: useControlValues.ts  useDeviceTree.ts  useMappings.ts
apollo-control/src/models/: types.ts
apollo-control/src/styles/: neumorphic-tokens.css
apollo-control/src/utils/: analytics.ts  keyTranslation.ts  midiTranslation.ts  tooltipContent.ts
releases/20260512/: Apollo Control_0.1.0_x64_en-US.msi
releases/20260516/: Apollo Control_0.3.0_x64_en-US.msi
src/: apollo_volume.py
tests/: test_apollo_control.py
(+12 files in other folders)
