[package]
name = "apollo-control"
version = "0.1.0"
description = "Apollo Control — keyboard mapping app for UA Apollo interfaces"
authors = []
edition = "2021"

[lib]
name = "apollo_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rdev = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
log = "0.4"
midir = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
